--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1322,6 +1322,23 @@ body, div, p {
     /* margin-top: 250px; */
     margin-bottom: 100px;
 }
+@media (max-width: 480px) {
+    .third__screen {
+        width: 380px;
+        height: 350px;
+        background-color: #ffffff;
+        padding: 10px;
+        box-shadow:  0 3px 10px 4px rgba(2, 4, 30, 0.105);
+        padding: 10px;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+        margin-top: 100px;
+        /* margin-top: 250px; */
+        margin-bottom: 100px;
+    }
+}
 .inner-rectangle {
     width: 100%;
     height: 100%;
@@ -1333,7 +1350,23 @@ body, div, p {
     justify-content: center;
     align-items: center;
 }
-
+@media (max-width: 480px) {
+    .inner-rectangle {
+        width: 355px;
+        height: 328px;
+        background-color: #ffffff;
+        padding: 10px;
+        box-shadow:  0 3px 10px 4px rgba(2, 4, 30, 0.105);
+        padding: 10px;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+        /* margin-top: 100px; */
+        /* margin-top: 250px; */
+        /* margin-bottom: 100px; */
+    }
+}
 .make{
     text-align: center;
     font-family: 'Roboto', sans-serif;
@@ -1346,8 +1379,26 @@ body, div, p {
     width: 763px;
     margin: 0;
 }
-
-
+@media (max-width: 480px) {
+    .make {
+        text-align: center;
+        font-family: 'Roboto', sans-serif;
+        font-size: 28px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 130%; /* 41.6px */
+        text-transform: uppercase;
+        color: #1B1D1F;
+        width: 763px;
+        margin: 0;
+}
+} 
+@media (max-width: 480px) {
+    .main-third {
+        width: 380px;
+        margin: 0 auto;
+}
+} 
 .fill{
     text-align: center;
     color: #1B1D1F;
@@ -1360,19 +1411,47 @@ body, div, p {
     margin-bottom: 44px;
     margin-top: 10px;
 }
-
+@media (max-width: 480px) {
+    .fill {
+        padding-top: 16px;
+        width: 355px;
+        margin: 0 auto;
+}
+} 
 .input-form {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  
+
+@media (max-width: 480px) {
+    .input-form  {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 16px;
+        margin: 0 auto;
+}
+}  
   .input-wrapper {
     position: relative;
     margin-right: 50px;
+}
+@media (max-width: 480px) {
+    .input-wrapper  {
+        position: relative;
+        margin: 0;
+} 
+} 
+/* @media (max-width: 480px) {
+    .input-wrapper  {
+        position: relative;
+        margin-right: 50px;
+        height: 46px;
+} 
+}  */
 
-  }
-  
   .input-wrapper input {
     /* width: 233px; */
     height: 57px;
@@ -1423,6 +1502,11 @@ body, div, p {
     font-weight: bold;
     
 }
+@media (max-width: 480px) {
+    .sign_up_button  {
+width: 225px;
+} 
+} 
 .input-form {
     margin: 0 auto;
 }
