--- a/styles/styles.css
+++ b/styles/styles.css
@@ -332,12 +332,102 @@ body, div, p {
     background-repeat: no-repeat;
     left: -23px;
 }
+.burger {
+    .burger{
+        position: relative;
+        }
+    
+        .span-burger{
+            position: relative;
+            display: flex;
+            background-color: #1B1D1F;
+            background-repeat: no-repeat;
+            /* text-align: center;
+            justify-content: center; */
+            height: 2px;
+            width: 24px;
+            
+        }
+    
+        .span-burger::before{
+            content: "";
+            background-color: #1B1D1F;
+            background-repeat: no-repeat;
+            /* text-align: center;
+            justify-content: center; */
+            height: 2px;
+            width: 24px;
+            top: 7px;
+            left: 0px;
+            position: absolute;
+            }
+    
+        .span-burger::after{
+                content: "";
+                background-color: #1B1D1F;
+                background-repeat: no-repeat;
+                /* text-align: center;
+                justify-content: center; */
+                height: 2px;
+                width: 24px;
+                top: -7px;
+                left: 0px;
+                position: absolute;
+            }
+    
+            .span-burger:hover::after{
+                background-color: #0591CC;
+                transform: rotate(45deg);
+                top: 0;
+                left: 0;
+            } 
+    
+            .span-burger:hover::before{
+                background-color: #0591CC;
+                transform: rotate(-45deg);
+                top: 0;
+                left: 0;
+            } 
+    
+
+            .span-burger:hover{
+                height: 0px;
+                width: 24px;
+            }  
+}
+@media(min-width: 768px){
+    .burger{
+        display: none;
+    }
+}
 
 .main__text__layout {
     display: flex;
     width: 530px;
     flex-direction: column;
     flex-shrink: 0; 
+}
+.main__text__layout {
+    transition-property:all;
+    animation-name: main-text;
+    animation-duration: 0.7s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+    animation-delay: 0.05s;
+    animation-iteration-count: 1;
+    transition-timing-function: ease-in;
+    position: relative;
+}
+
+@keyframes main-text {
+    0% {
+      bottom: -40px;
+      opacity: 0;
+    }
+    100%{
+      bottom: 0;
+      opacity: 1;
+    }
 }
 @media (max-width: 480px) {
     .main__text__layout {
@@ -419,7 +509,28 @@ body, div, p {
     display: flex;
     gap: 120px;
 }
-
+.main__btn{
+    transition-property:all;
+    animation-name: main-btn;
+    animation-duration: 0.7s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+    animation-delay: 0.1s;
+    animation-iteration-count: 1;
+    transition-timing-function: ease-in;
+    position: relative;
+  }
+  
+  @keyframes main-btn {
+    0% {
+      bottom: -30px;
+      opacity: 0;
+    }
+    100%{
+      bottom: 0;
+      opacity: 1;
+    }
+  }
 @media (max-width: 992px) {
     .main__btn{
         /* padding: 10px 10px; */
@@ -497,7 +608,29 @@ body, div, p {
     grid-template-columns:repeat(3,  260px);
     grid-template-rows: repeat(1,  122px);
 }
-
+.main__block{
+    transition-property:all;
+    animation-name: main-block;
+    animation-duration: 0.9s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+    animation-delay: 0.5s;
+    animation-iteration-count: 1;
+    transition-timing-function: ease;
+  }
+  @keyframes main-block {
+    0% {
+      left: -200px;
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;  
+    }
+    100%{
+      left: 0;
+      opacity: 1;
+    }
+  }
 @media (max-width:992px) {
     .main__block{
         text-align: center;
@@ -752,10 +885,11 @@ body, div, p {
 }
 @media (max-width: 992px) {
     .img-lady {
-        height: 511px;
+        width: 500px;
+        height: 500px;
         position: absolute;
-        right: -115px;
-        top: 54px;
+        right: -132px;
+        top: -18px;
 
     }
 }
