service block animation

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1164,34 +1164,159 @@ body, div, p {
     margin: 0 auto;
     place-items: center;
     align-items: center;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     position: relative;
-
 }
+
 .big__tooth {
     top: 50%;
     left: 50%;
-    transform: translate(0%, 35%)
+    transform: translate(0%, 35%);
 }
 .ellipse1 {
-    transform: translate(110px, 80px);
+    transition-property:all;
+    animation-name: plus-icon1;
+    animation-duration: 0.7s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    transition-timing-function: ease-in;
+    position: relative;
+    transform: translate(-113px, -125px);
+
+}
+@keyframes plus-icon1 {
+    0% {
+        transform: translate(0%, 35%);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(-113px, -125px);
+        opacity: 1;
+    }
 }
 .ellipse2 {
-    transform: translate(-108px, 53px);
+    transition-property:all;
+    animation-name: plus-icon2;
+    animation-duration: 0.7s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    transition-timing-function: ease-in;
+    position: relative;
+    transform: translate(-153px, -47px);
 }
+
+@keyframes plus-icon2 {
+    0% {
+        transform: translate(46px, 0px);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(-153px, -47px);
+        opacity: 1;
+    
+    }
+  }
+
 .ellipse3 {
-    transform: translate(110px, -175px);
+    transition-property:all;
+    animation-name: plus-icon3;
+    animation-duration: 0.7s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    transition-timing-function: ease-in;
+    position: relative;
+    transform: translate(-111px, 29px);
 }
+  
+@keyframes plus-icon3 {
+    0% {
+        transform: translate(17px, 0px);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(-111px, 29px);
+        opacity: 1;
+    }
+  }
 .ellipse4 {
-    transform: translate(-113px, -198px);
+    transition-property:all;
+    animation-name: plus-icon4;
+    animation-duration: 0.7s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    transition-timing-function: ease-in;
+    position: relative;
+    transform: translate(111px, -197px);
 }
+
+@keyframes plus-icon4 {
+    0% {
+        transform: translate(-10px, 0px);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(111px, -197px);
+        opacity: 1;
+
+    }
+  }
 .ellipse5 {
-    transform: translate(-151px, -119px);
+    transition-property:all;
+    animation-name: plus-icon5;
+    animation-duration: 0.7s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    transition-timing-function: ease-in;
+    position: relative;
+    transform: translate(151px, -119px);
 }
+
+@keyframes plus-icon5 {
+    0% {
+        transform: translate(10px, 0px);
+        opacity: 0;
+        
+    }
+    100%{
+        transform: translate(151px, -119px);
+        opacity: 1;
+    }
+  }
 .ellipse6 {
-    transform: translate(151px, -142px);
+    transition-property:all;
+    animation-name: plus-icon6;
+    animation-duration: 0.7s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    transition-timing-function: ease-in;
+    position: relative;
+    transform: translate(111px, -39px);
 }
+
+@keyframes plus-icon6 {
+    0% {
+        transform: translate(-66px, 0px);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(111px, -39px);
+        opacity: 1;
+    }
+  }
 
 .service_description1 {
     width: 310px;
@@ -1200,7 +1325,30 @@ body, div, p {
     align-items: flex-end;
     gap: 5px;
     transform: translate(116px, -320px);
+    transition-property:all;
+    animation-name: service-1;
+    animation-duration: 0.7s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    transition-timing-function: ease-in;
+    position: relative;
 }
+
+@keyframes service-1 {
+    0% {
+        left: 0%;
+        transform: translate(-292px, -313px);
+        opacity: 0;
+        display: none;
+    }
+
+    100%{
+        transform: translate(116px, -320px);
+        opacity: 1;
+    }
+  }
 
 @media (max-width: 992px) {
     .service_description1 {
@@ -1222,9 +1370,27 @@ body, div, p {
     flex-direction: column;
     align-items: flex-end;
     gap: 5px;
+    transition-property:all;
+    animation-name: service-2;
+    animation-duration: 0.7s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: none;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    transition-timing-function: ease-in;
+    position: relative;
     transform: translate(-243px, -190px);
 }
-
+@keyframes service-2 {
+    0% {
+        transform: translate(-292px, -190px);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(-243px, -190px);
+        opacity: 1;
+    }
+  }
 @media (max-width: 992px) {
     .service_description2 {
         width: 280px;
@@ -1245,9 +1411,27 @@ body, div, p {
     flex-direction: column;
     align-items: flex-end;
     gap: 5px;
+    transition-property:all;
+    animation-name: service-3;
+    animation-duration: 0.7s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: none;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    transition-timing-function: ease-in;
+    position: relative;
     transform: translate(-542px, -62px);
 }
-
+@keyframes service-3 {
+    0% {
+        transform: translate(-602px, -62px);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(-542px, -62px);
+        opacity: 1;
+    }
+  }
 /* @media (max-width: 1400px) {
     .service_description3 {
         width: 310px;
@@ -1275,7 +1459,26 @@ body, div, p {
     align-items: flex-start;
     gap: 5px;
     transform: translate(760px, -432px);
+    transition-property:all;
+    animation-name: service-4;
+    animation-duration: 0.7s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    transition-timing-function: ease-in;
+    position: relative;
 }
+@keyframes service-4 {
+    0% {
+        transform: translate(1102px, -432px);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(760px, -432px);
+        opacity: 1;
+    }
+  }
 /* @media (max-width: 1400px) {
     .service_description4 {
         width: 310px;
@@ -1303,7 +1506,27 @@ body, div, p {
     align-items: flex-start;
     gap: 5px;
     transform: translate(487px, -302px);
+    transition-property:all;
+    animation-name: service-5;
+    animation-duration: 0.7s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: none;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    transition-timing-function: ease-in;
+    position: relative;
 }
+
+@keyframes service-5 {
+    0% {
+        transform: translate(752px, -310px);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(487px, -302px);
+        opacity: 1;
+    }
+  }
 /* @media (max-width: 1400px) {
     .service_description5 {
         width: 310px;
@@ -1331,7 +1554,27 @@ body, div, p {
     align-items: flex-start;
     gap: 5px;
     transform: translate(131px, -174px);
+    transition-property:all;
+    animation-name: service-6;
+    animation-duration: 0.7s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: none;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    transition-timing-function: ease-in;
+    position: relative;
 }
+
+@keyframes service-6 {
+    0% {
+        transform: translate(552px, -174px);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(131px, -174px);
+        opacity: 1;
+    }
+  }
 /* @media (max-width: 1400px) {
     .service_description6 {
         width: 310px;
